# shop_fastapi

./: .env.example  Makefile  docker-compose.yaml
backend/: Dockerfile  pyproject.toml
backend/app/: Makefile  app_factory.py  main.py  settings.py
backend/app/apps/core/: base_models.py  schema.py
backend/app/apps/info/: router.py  schemas.py
backend/app/apps/users/: models.py  router.py  schema.py
backend/migrations/: env.py
backend/migrations/versions/: 2026_03_19_1809-73db5ada2d34_add_user.py  2026_04_14_1604-7efe9251ba32_add_user_password.py  2026_04_14_1612-bf13d1128c8f_add_user_password.py
documentation/: mkdocs.yaml
documentation/docs/: examples.md
nginx/: nginx.conf
